--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+  
+body{
+    margin: 0;
+    padding: 0;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -16,12 +22,3 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
